--- a/Class Presentations/reveal-presentations/ObjectsAndDom.html
+++ b/Class Presentations/reveal-presentations/ObjectsAndDom.html
@@ -54,20 +54,24 @@
 					<h2>Goals</h2>
 					<ul class="checklist">
 						<li>
-							<input type="checkbox" id="goal1" />
+							<input type="checkbox" id="goal1"  />
 							<label for="goal1">What are objects?</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal2" />
-							<label for="goal2">Built-in Objects</label>
+							<label for="goal2">Creating Objects</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal3" />
-							<label for="goal3">Creating Objects</label>
+							<label for="goal3">Methods</label>
 						</li>
 						<li>
 							<input type="checkbox" id="goal4" />
-							<label for="goal4">The Document Object Model</label>
+							<label for="goal4">Built-In Objects</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal5" />
+							<label for="goal5">The Document Object Model</label>
 						</li>
 					</ul>
 				</section>
@@ -286,6 +290,37 @@
 				<p>Now, how do we create Kelly with these properties?</p>
 			</section>
 
+			<section>
+				<h2>Goals</h2>
+				<ul class="checklist">
+					<li>
+						<input type="checkbox" id="goal1" checked />
+						<label for="goal1">What are objects?</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal2" checked/>
+						<label for="goal2">Creating Objects</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal3" checked/>
+						<label for="goal3">Methods</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal4" checked/>
+						<label for="goal4">Built-In Objects</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal5" checked/>
+						<label for="goal5">The Document Object Model</label>
+					</li>
+				</ul>
+			</section>
+
+			<section>
+				<h2>Creating Objects and Methods</h2>
+				<h3>feat. Kelly the Box Turtle</h3>
+			</section>
+
 			<section data-markdown>
 				```javascript
 				var kelly = {
@@ -327,32 +362,104 @@
 					</section>
 				</section>
 
+				<section>
+					<h2>Goals</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal1" checked />
+							<label for="goal1">What are objects?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2" checked/>
+							<label for="goal2">Creating Objects</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3" />
+							<label for="goal3">Methods</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4" />
+							<label for="goal4">Built-In Objects</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal5" />
+							<label for="goal5">The Document Object Model</label>
+						</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Methods</h2>
+				</section>
+
+				<section>
+					<p>Now, Kelly isn't just a statue of a turtle...she's the real thing.</p>
+					<p>That means she can do things! She can perform certain <em>functions</em>.</p>
+				</section>
+
+				<section>
+					<p>A property that contains a function of an object is also called a <strong>method</strong> of that object.</p>
+					<p>source: EloquentJavaScript.net (a long but good read)</p>
+				</section>
+
+				<section data-markdown>
+					```javascript
+					var kelly = {
+						species: "common box turtle",
+						weight: 2.4,
+						position: 1,
+						gender: female,
+						walk: function() {position++;}
+					}
+					```
+					(You can see how this is a collection of variables.)
+				</section>
+
+				<section>
+					<p>To invoke a function, use the parentheses.
+						Otherwise, you will just get the function definition.</p>
+				</section>
+
+				<section data-markdown>
+					```javascript
+					kelly.walk();
+					console.log(kelly.position);
+					}
+					```
+					&lt;em&gt;Parentheses:&lt;/em&gt; On the console, you will see that Kelly's position has increased to 2.
+				</section>
+
+				<section data-markdown>
+					```javascript
+					kelly.walk;
+					console.log(kelly.position);
+					}
+					```
+					&lt;em&gt;No parentheses:&lt;/em&gt; Nothing will have happened. Kelly will remain where she was, at 1.
+				</section>
+
 			<section>
 				<h2>And Now We're Done</h2>
 				<ul class="checklist">
 					<li>
-						<input type="checkbox" id="goal1" checked/>
-						<label for="goal1">What are control structures?</label>
+						<input type="checkbox" id="goal1" checked />
+						<label for="goal1">What are objects?</label>
 					</li>
 					<li>
 						<input type="checkbox" id="goal2" checked/>
-						<label for="goal2">If(-Else) Statement</label>
+						<label for="goal2">Creating Objects</label>
 					</li>
 					<li>
 						<input type="checkbox" id="goal3" checked/>
-						<label for="goal3">Switch</label>
+						<label for="goal3">Methods</label>
 					</li>
 					<li>
 						<input type="checkbox" id="goal4" checked/>
-						<label for="goal4">For Loop</label>
+						<label for="goal4">Built-In Objects</label>
 					</li>
 					<li>
 						<input type="checkbox" id="goal5" checked/>
-						<label for="goal5">While Loop</label>
-					</li>
-					<li>
-						<input type="checkbox" id="goal6" checked/>
-						<label for="goal6">Do-While Loop</label>
+						<label for="goal5">The Document Object Model</label>
 					</li>
 				</ul>
 				<p text-align="right">At least...by our definition of done.</p>
