--- a/Class Presentations/reveal-presentations/ObjectsAndDom.html
+++ b/Class Presentations/reveal-presentations/ObjectsAndDom.html
@@ -351,7 +351,7 @@
 				</section>
 				<section data-markdown>
 					```javascript
-					var text = kelly[species];
+					var text = kelly["species"];
 					```
 				</section>
 				<section>
