Add five minutes of struggle to methods section

--- a/Class Presentations/reveal-presentations/ObjectsAndDom.html
+++ b/Class Presentations/reveal-presentations/ObjectsAndDom.html
@@ -478,7 +478,13 @@
 				&lt;em&gt;Parentheses:&lt;/em&gt; On the screen, you will see that Kelly's position has increased to 2.
 			</section>
 
-
+			<section>
+				<h2>5 Minutes of Struggle</h2>
+				<p>Struggle 1: add a button that can be pressed to move Kelly forward.</p>
+				<p>Struggle 2: Give Kelly another attribute and a function. Then, add a button that
+					calls the function. Example:
+					rollOver(); which will say if Kelly is on her feet or on her shell.</p>
+			</section>
 
 			<section>
 				<h2>Goals</h2>
