Add event listener challenge

--- a/Class Presentations/reveal-presentations/ArraysAndEvents.html
+++ b/Class Presentations/reveal-presentations/ArraysAndEvents.html
@@ -284,6 +284,11 @@ challenges.onclick = doSomething;
               </section>
 
               <section>
+                <h2>The event listener challenge</h2>
+                <p>Complete the challenges in arraysAndEvents2.html.</p>
+              </section>
+
+              <section>
                 <h2>Goals</h2>
                 <ul class="checklist">
                   <li>
