Update about different data types in arrays

--- a/Class Presentations/reveal-presentations/ArraysAndEvents.html
+++ b/Class Presentations/reveal-presentations/ArraysAndEvents.html
@@ -145,6 +145,13 @@ var sounds = ["zip", "zap", "zop"];
             ```
         </section>
 
+				<section>
+					<p>Fun fact: in JavaScript, elements in arrays are allowed to be of
+						different data types.
+						This works just fine:</p>
+					<p>var mess = [5, "taco", false];</p>
+				</section>
+
         <section>
           <p>Arrays also have methods that allow you to find elements in them,
             combine arrays, add new elements, return elements, etc.</p>
