Declaring local variables with var keyword

--- a/Coding Examples/arraysAndEvents1.html
+++ b/Coding Examples/arraysAndEvents1.html
@@ -20,7 +20,7 @@ var seaTurtles = ["Leatherback", "Green Turtle", "Hawksbill", "Loggerhead",
 "Olive Ridley", "Kemp's Ridley", "Flatback"];
 
 var switchTitle = function(index) {
-  title = document.getElementById('title');
+  var title = document.getElementById('title');
   title.innerHTML = possibleTitles[index];
 }
 
