--- a/Coding Examples/arraysAndEvents2_completed.html
+++ b/Coding Examples/arraysAndEvents2_completed.html
@@ -13,10 +13,10 @@
       the text changes.</li>
   </ol>
 <script>
-  challenges = document.getElementById('challenges');
+  var challenges = document.getElementById('challenges');
   challenges.onclick = alert('I\'ve been clicked!');
 
-  title = document.getElementById('title');
+  var title = document.getElementById('title');
 
   var changeColor = function() {
     title.style = "color:red;"
