--- a/Class Presentations/reveal-presentations/TutorialWebpageProject.html
+++ b/Class Presentations/reveal-presentations/TutorialWebpageProject.html
@@ -138,6 +138,43 @@
 				</section>
 
 				<section>
+					<p>The purpose of this website project is to pull together your own
+						 knowledge and share it with others. You will create a tutorial for
+						 users about how to do something you now know how to do in
+						  JavaScript.</p>
+				</section>
+
+				<section>
+					<p>It doesn't have to be something you learned directly from the
+						slides; in fact, you can research a new topic.</p>
+						<p>A successful completed project will have the following features:</p>
+				</section>
+
+				<section>
+					<ul>
+						<li>a two-paragraph explanation that describes why you chose the
+							topic you chose, what it can be useful for, and any other
+							information that you want to share with the user.</li>
+						<li>A step-by-step guide for implementing the thing that you are
+							describing. This guide should include at least three code snippets
+							 to illustrate the topic. (You may add more if you want to show
+							  additional examples, or real use cases you have found.)</li>
+						<li>a quiz for users at the end, to answer at at least six questions
+							 about the information on your site</li>
+						<li>works cited (a list of your sources)</li></ul>
+				</section>
+
+				<section>
+					<p>This project should be completed in pairs or on your own. If you
+						 work in a pair, the requirements are doubled (four-paragraph
+						  explanation, six code snippets, a twelve-question quiz).</p>
+				</section>
+
+				<section>
+				<h2>This project is due at the end of class on Monday, May 16.</h2>
+				</section>
+
+				<section>
 					<h2>Goals</h2>
 					<ul class="checklist">
 						<li>
