--- a/Class Presentations/reveal-presentations/SelfConf2016.html
+++ b/Class Presentations/reveal-presentations/SelfConf2016.html
@@ -85,10 +85,12 @@
 
 				<section>
 					<h2>Brandy.</h2>
+					<img src="../presentation-images/selfconf2016/brandy.png" width="292px" height="405px">
 				</section>
 
 				<section>
 					<h2>Kyle.</h2>
+					<img src="../presentation-images/selfconf2016/kyle.jpg" width="292px" height="390px">
 				</section>
 
 				<section>
@@ -102,7 +104,7 @@
 
 				<section>
 				<p>The program is held at Detroit Edison Public School Academy (DEPSA)
-					Early College of Excellence, a high school just north of
+					Early College of Excellence, a charter high school just north of
 					Eastern Market.</p>
 					<img src="../presentation-images/selfconf2016/ece_triptych.png">
 				</section>
@@ -111,7 +113,35 @@
 				<p>We meet twice a week.</p>
 				</section>
 
-
+				<section>
+					<h2>Goals</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal0" checked />
+							<label for="goal0">Who Are We, and What Is This Project?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal1" />
+							<label for="goal1">Why Did We Decide to Do This?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2" />
+							<label for="goal2">What Resources Did We Use?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3" />
+							<label for="goal3">What Has Been Easy? Difficult? Fun?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4" />
+							<label for="goal4">What Are Some Things We Didn't Think About?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal5" />
+							<label for="goal5">What Lessons Did We Learn?</label>
+						</li>
+					</ul>
+				</section>
 
 
 
@@ -148,6 +178,49 @@
 				</aside>
 				</section>
 
+				<section>
+					<h2>Goals</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal0" checked />
+							<label for="goal0">Who Are We, and What Is This Project?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal1" checked />
+							<label for="goal1">Why Did We Decide to Do This?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2" />
+							<label for="goal2">What Resources Did We Use?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3" />
+							<label for="goal3">What Has Been Easy? Difficult? Fun?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4" />
+							<label for="goal4">What Are Some Things We Didn't Think About?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal5" />
+							<label for="goal5">What Lessons Did We Learn?</label>
+						</li>
+					</ul>
+				</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -158,19 +231,15 @@
 
 				<section>
 				<h3>For learning HTML/CSS/JavaScript:</h3>
-				<ul>
-					<li>HTML &amp; CSS and JavaScript &amp; JQuery (Jon Duckett)</li>
-					<li>Head First JavaScript (Elisabeth Freeman &amp; Eric Freeman)</li>
-					<li>W3Schools.com</li>
-				</ul>
+				<img src="../presentation-images/selfconf2016/duckett_books.jpg" width="640px" height="360px">
+				<img src="../presentation-images/selfconf2016/head_first_js.png" width="292px" height="405px">
+				<img src="../presentation-images/selfconf2016/w3_schools_logo.png" width="374px" height="48px">
 				</section>
 
 				<section>
 				<h3>For presenting HTML/CSS/JavaScript:</h3>
-				<ul>
-					<li>Atom (text editor)</li>
-					<li>Reveal.js (making slideshows)</li>
-				</ul>
+				<img src="../presentation-images/selfconf2016/atom_editor.png" width="400px" height="400px">
+				<img src="../presentation-images/selfconf2016/reveal_js.jpg" width="320px" height="156px">
 				<aside class="notes">Reveal's added benefit: practice using JS</aside>
 				</section>
 
@@ -182,35 +251,293 @@
 				<aside class="notes">Really was helpful to have him with the students</aside>
 				</section>
 
+				<section>
+					<h2>Goals</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal0" checked />
+							<label for="goal0">Who Are We, and What Is This Project?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal1" checked />
+							<label for="goal1">Why Did We Decide to Do This?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2" checked />
+							<label for="goal2">What Resources Did We Use?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3" />
+							<label for="goal3">What Has Been Easy? Difficult? Fun?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4" />
+							<label for="goal4">What Are Some Things We Didn't Think About?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal5" />
+							<label for="goal5">What Lessons Did We Learn?</label>
+						</li>
+					</ul>
+				</section>
 
-<section>
-				<h3>We saw a need.</h3>
-				<aside class="notes"> -students asked if DL had internships, answer was
-					no
-					-we could only point them to resources and hope they figured it out
-					-knew that their peers from wealthier backgrounds could access people,
-					AP courses, clubs, etc
+
+
+
+
+
+
+
+
+				<section>
+					<h2>What Has Been Easy? Difficult? Fun?</h2>
+				</section>
+
+				<section>
+				<h3>Remembering the resource gap and checking our privilege--difficult.</h3>
+				<aside class="notes"> not everyone has a computer they can tinker on at
+					 home, so you need paper-friendly resources as well.
 				</aside>
 				</section>
 
 				<section>
-				<h3>We were familiar with teaching.</h3>
-				<aside class="notes"> -former math teacher
-					-current mother, former education student
+				<h3>Forming relationships with the students--easy...</h3>
+				<aside class="notes"> Easy because we laid a good foundation by
+					 dedicating the first two sessions to getting to know each other and
+					 setting clear expectations.
 				</aside>
 				</section>
+
+				<section>
+				<h3>Keeping the lessons engaging, and trying to teach to multiple
+					learning styles--difficult.</h3>
+				<aside class="notes"> The students gave us new ideas throughout the class,
+					though, as well as through a survey we sent out at the halfway point of
+					the program.
+				</aside>
+				</section>
+
+				<section>
+				<h3>The challenge of keeping up with the students growth and development
+					--fun.</h3>
+				<aside class="notes"> It made us better teachers, as well.
+				</aside>
+				</section>
+
+				<section>
+				<h3>Scheduling--difficult.</h3>
+				<aside class="notes"> Things always change, and people are busy:
+					after-school activities, state testing that ends up needing to
+					 be redone...
+				</aside>
+				</section>
+
+				<section>
+				<h3>Watching the students light up when their code works--fun.</h3>
+				<aside class="notes">
+				</aside>
+				</section>
+
+				<section>
+					<h2>Goals</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal0" checked />
+							<label for="goal0">Who Are We, and What Is This Project?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal1" checked />
+							<label for="goal1">Why Did We Decide to Do This?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2" checked />
+							<label for="goal2">What Resources Did We Use?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3" checked />
+							<label for="goal3">What Has Been Easy? Difficult? Fun?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4" />
+							<label for="goal4">What Are Some Things We Didn't Think About?</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal5" />
+							<label for="goal5">What Lessons Did We Learn?</label>
+						</li>
+					</ul>
+				</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+			<section>
+				<h2>What Are Some Things We Didn't Think About?</h2>
+			</section>
+
+			<section>
+			<h3>(Ironically enough...)</h3>
+			<img src="../presentation-images/selfconf2016/smartphones.jpg"
+			class="fragment" width="550px" height="309px">
+			<aside class="notes">The kids who have smartphones use them for a lot
+				more than we did or even do now. For many, it's the main way that they
+				 view the slides we send out and do research...
+				 the computer is almost just for typing code.
+			</aside>
+			</section>
+
+			<section>
+			<img src="../presentation-images/selfconf2016/empty_classroom.jpg"
+			width="640px" height="426px">
+			<aside class="notes">Those involved in coding are involved in many other
+				 things, so attendance was not always 100%; had to be ready to send
+				  out whatever the lesson was, and to keep referencing those lessons
+					 (integrating review into lesson, instead of stopping to review).
+			</aside>
+			</section>
+
+			<section>
+			<img src="../presentation-images/selfconf2016/stressed_student.jpg"
+			 width="320px" height="214px">
+			<aside class="notes">Students may have stressful home/personal lives
+				 that will negatively affect their participation in class and they
+				 need empathetic connections, not judgement.
+			</aside>
+			</section>
+
+			<section>
+				<h2>Goals</h2>
+				<ul class="checklist">
+					<li>
+						<input type="checkbox" id="goal0" checked />
+						<label for="goal0">Who Are We, and What Is This Project?</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal1" checked />
+						<label for="goal1">Why Did We Decide to Do This?</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal2" checked />
+						<label for="goal2">What Resources Did We Use?</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal3" checked />
+						<label for="goal3">What Has Been Easy? Difficult? Fun?</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal4" checked />
+						<label for="goal4">What Are Some Things We Didn't Think About?</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal5" />
+						<label for="goal5">What Lessons Did We Learn?</label>
+					</li>
+				</ul>
+			</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+			<section>
+				<h2>What Lessons Did We Learn?</h2>
+			</section>
+
+			<section>
+				<h2>Re: Organization</h2>
+				<ul>
+					<li>Get the academic calendar with all academic/extracurricular days</li>
+					<li>A stronger system for keeping track of your own files</li>
+					<li>Creating more integrated lessons that incorporated more soft skills
+						 from the beginning.</li>
+				</ul>
+				<aside class="notes">Academic calendar--so we could have planned for
+					testing/mid-terms/finals and ceremonies/celebrations as well as
+					vacations/days out.
+					File system--students switched computers a lot, or would forget flash drives
+					Integrated lessons--coding skills are not enough, they need to know what
+					being a coder is really like and what abilities are valuable in the industry
+				</aside>
+			</section>
+
+			<section>
+				<h2>Re: Engagement</h2>
+				<ul>
+					<li>Create more out of class lessons to be delivered via email/text
+						 messaging</li>
+					<li>Use of more hands-on student-led activities</li>
+				</ul>
+				<aside class="notes">Out of class lessons -- keep engagement high between sessions.
+					Hands-on activities--We'd want them to have to research
+					to complete the tasks vs following our examples. The students should be
+					driving their learning as often as possible
+				</aside>
+			</section>
+
+			<section>
+				<h2>Re: Efficiency</h2>
+				<ul>
+					<li>Have students take an entry survey</li>
+					<li>Develop on codepen.io (or something similar) from the beginning</li>
+				</ul>
+				<aside class="notes">Survey: to create a baseline we could properly
+					measure their development (in skill and interest) from
+					Codepen: so you can see how everything works together without the
+					saving and loading, etc. Eventually we'd teach them that, but we could
+					save the complication at the beginning
+				</aside>
+			</section>
 
 
 			<section>
 				<h2>And Now We're Done</h2>
 				<ul class="checklist">
 					<li>
-						<input type="checkbox" id="goal1" checked />
-						<label for="goal1">Project Explanation</label>
+						<input type="checkbox" id="goal0" checked />
+						<label for="goal0">Who Are We, and What Is This Project?</label>
 					</li>
 					<li>
-						<input type="checkbox" id="goal2" />
-						<label for="goal2">Work Time</label>
+						<input type="checkbox" id="goal1" checked />
+						<label for="goal1">Why Did We Decide to Do This?</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal2" checked />
+						<label for="goal2">What Resources Did We Use?</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal3" checked />
+						<label for="goal3">What Has Been Easy? Difficult? Fun?</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal4" checked />
+						<label for="goal4">What Are Some Things We Didn't Think About?</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal5" checked />
+						<label for="goal5">What Lessons Did We Learn?</label>
 					</li>
 				</ul>
 				<p text-align="right">At least...by our definition of done.</p>
