--- a/Class Presentations/reveal-presentations/SelfConf2016.html
+++ b/Class Presentations/reveal-presentations/SelfConf2016.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Objects and Document Object Model</title>
+		<title>What Teaching Has Taught Us</title>
 
 		<meta name="description" content="Self Conference presentation">
 		<meta name="author" content="Brandy Foster and Kyle Ofori">
