Include Brandy's updates

--- a/Class Presentations/reveal-presentations/SelfConf2016.html
+++ b/Class Presentations/reveal-presentations/SelfConf2016.html
@@ -110,7 +110,7 @@
 				</section>
 
 				<section>
-				<p>We meet twice a week.</p>
+				<p>We meet twice a week, for two hours each after school.</p>
 				</section>
 
 				<section>
@@ -168,6 +168,9 @@
 					-we could only point them to resources and hope they figured it out
 					-knew that their peers from wealthier backgrounds could access people,
 					AP courses, clubs, etc
+					-there was an obvious lack of black role models in technical fields
+					 available in the tech community at large, but specifically
+					 inside the walls of local schools.
 				</aside>
 				</section>
 
@@ -248,7 +251,11 @@
 				<ul>
 					<li>Mr. Lincoln, engineering teacher extraordinaire</li>
 				</ul>
-				<aside class="notes">Really was helpful to have him with the students</aside>
+				<aside class="notes">
+					-Really was helpful to have him with the students
+					-He selected the students for the program; his knowledge of them both
+					academically and personally allowed us to make deeper connections quickly
+				</aside>
 				</section>
 
 				<section>
@@ -305,6 +312,12 @@
 				<aside class="notes"> Easy because we laid a good foundation by
 					 dedicating the first two sessions to getting to know each other and
 					 setting clear expectations.
+					 This included:
+					 -playing a game to introduce ourselves to one another (which the two
+					 of us used JavaScript to make)
+					 -creating a team agreement all together, complete with norms we decided
+					 on together
+					 -having a teacher they already trusted to be around at the beginning
 				</aside>
 				</section>
 
@@ -320,7 +333,7 @@
 				<section>
 				<h3>The challenge of keeping up with the students growth and development
 					--fun.</h3>
-				<aside class="notes"> It made us better teachers, as well.
+				<aside class="notes"> It made us better teachers, as well as better students.
 				</aside>
 				</section>
 
@@ -335,6 +348,8 @@
 				<section>
 				<h3>Watching the students light up when their code works--fun.</h3>
 				<aside class="notes">
+					-A personal highlight of Brandy's. Helping someone to "getting it" has
+					been very fulfilling.
 				</aside>
 				</section>
 
@@ -511,6 +526,9 @@
 				</aside>
 			</section>
 
+		<section>
+			Questions?
+		</section>
 
 			<section>
 				<h2>And Now We're Done</h2>
