--- a/Class Presentations/reveal-presentations/SelfConf2016.html
+++ b/Class Presentations/reveal-presentations/SelfConf2016.html
@@ -338,6 +338,7 @@
 
 				<section>
 				<h3>Forming relationships with the students--easy...</h3>
+				<img src="../presentation-images/selfconf2016/20160516_brandyandstudents.jpg" width="800px" height="600px">
 				<aside class="notes"> (K) Easy because we laid a good foundation by
 					 dedicating the first two sessions to getting to know each other and
 					 setting clear expectations.<br />
@@ -380,6 +381,7 @@
 
 				<section>
 				<h3>Watching the students light up when their code works--fun.</h3>
+				<img src="../presentation-images/selfconf2016/20160516_students.jpg">
 				<aside class="notes">
 					-(B) A personal highlight of Brandy's. Helping someone to "getting it" has
 					been very fulfilling.
@@ -513,6 +515,7 @@
 
 			<section>
 				<h2>What Lessons Did We Learn?</h2>
+				<img src="../presentation-images/selfconf2016/20160418_retro.jpg">
 			</section>
 
 			<section>
