--- a/Class Presentations/reveal-presentations/SelfConf2016.html
+++ b/Class Presentations/reveal-presentations/SelfConf2016.html
@@ -77,6 +77,9 @@
 							<label for="goal5">What Lessons Did We Learn?</label>
 						</li>
 					</ul>
+					<aside class="notes">(K) We'll be walking you through our experience
+					starting this project, sharing some experiences along the way.
+				(B) (Add to that however you want)</aside>
 				</section>
 
 				<section>
@@ -103,7 +106,6 @@
 						try {
 							whatDoYouKnow();
 						}```
-					</p>
 				</section>
 						<section>How many of you know a high schooler who is interested in coding?</section>
 						<section>How many of you had access to a PC in your home in high school?</section>
@@ -115,7 +117,6 @@
 						<section>
 							<img src="../presentation-images/selfconf2016/hijiri_code.png">
 						</section>
-						<aside class="notes">Start with Brandy, alternate question askers</aside>
 			</section>
 
 				<section>
