Add photo to questions page

--- a/Class Presentations/reveal-presentations/SelfConf2016.html
+++ b/Class Presentations/reveal-presentations/SelfConf2016.html
@@ -597,7 +597,8 @@
 			</section>
 
 			<section>
-				Questions?
+				<p>Questions?</p>
+				<img src="../presentation-images/selfconf2016/group_photo.jpg" />
 			</section>
 
 
